test/classes/errors/nilability-assign/assign-oknil-owned-from-nonnil-owned.chpl
//  lhs: owned?  rhs: owned!  ok

class MyClass {  var x: int;  }

var lhs: owned MyClass?;
var rhs = new owned MyClass();

lhs = rhs;


